# crashing-haskell

./: README.org  crash.glade  linux-notification-center.cabal  stack.yaml
src/: NotificationCenter.hs
