name:                linux-notification-center
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NotificationCenter
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , cairo
                     , gi-cairo
                     , gi-gtk
                     , text
                     , containers
  default-language:    Haskell2010

executable crash-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , linux-notification-center
  default-language:    Haskell2010
